rust_core/target/debug/build/rust_core-1ba252fce647d3e6/out/bindings.rs

unsafe extern "C" {
    #[doc = " 获取统计信息\n @param handle 抓包句柄\n @param stats 统计信息结构\n @return 成功返回 0，失败返回错误码"]
    pub fn capture_get_stats(
        handle: *mut capture_handle_t,
        stats: *mut capture_stats_t,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " 设置过滤器\n @param handle 抓包句柄\n @param filter BPF 过滤器\n @return 成功返回 0，失败返回错误码"]
    pub fn capture_set_filter(
        handle: *mut capture_handle_t,
        filter: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " 获取支持的设备列表\n @param devices 设备列表\n @param count 设备数量\n @return 成功返回 0，失败返回错误码"]
    pub fn capture_get_devices(
        devices: *mut *mut capture_device_t,
        count: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " 释放设备列表\n @param devices 设备列表\n @param count 设备数量"]
    pub fn capture_free_devices(devices: *mut capture_device_t, count: ::std::os::raw::c_int);
}
unsafe extern "C" {
    #[doc = " 清理抓包句柄\n @param handle 抓包句柄"]
    pub fn capture_cleanup(handle: *mut capture_handle_t);
}
#[doc = " 后端操作函数表"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct capture_backend_ops_t {
    pub init: ::std::option::Option<
        unsafe extern "C" fn(
            backend: *mut ::std::os::raw::c_void,
            config: *const capture_config_t,
        ) -> ::std::os::raw::c_int,
    >,
    pub cleanup: ::std::option::Option<unsafe extern "C" fn(backend: *mut ::std::os::raw::c_void)>,
    pub open: ::std::option::Option<
        unsafe extern "C" fn(
            backend: *mut ::std::os::raw::c_void,
            device: *const ::std::os::raw::c_char,
        ) -> ::std::os::raw::c_int,
    >,
    pub close: ::std::option::Option<
        unsafe extern "C" fn(backend: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int,
    >,
    pub start: ::std::option::Option<
        unsafe extern "C" fn(
            backend: *mut ::std::os::raw::c_void,
            callback: packet_callback_t,
            user_data: *mut ::std::os::raw::c_void,
        ) -> ::std::os::raw::c_int,
    >,
    pub stop: ::std::option::Option<
        unsafe extern "C" fn(backend: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int,
    >,
    pub pause: ::std::option::Option<
        unsafe extern "C" fn(backend: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int,
    >,
    pub resume: ::std::option::Option<
        unsafe extern "C" fn(backend: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int,
    >,
    pub set_filter: ::std::option::Option<
        unsafe extern "C" fn(
            backend: *mut ::std::os::raw::c_void,
            filter: *const ::std::os::raw::c_char,
        ) -> ::std::os::raw::c_int,
    >,
    pub get_stats: ::std::option::Option<
        unsafe extern "C" fn(
            backend: *mut ::std::os::raw::c_void,
            stats: *mut capture_stats_t,
        ) -> ::std::os::raw::c_int,
    >,
    pub get_devices: ::std::option::Option<
        unsafe extern "C" fn(
            backend: *mut ::std::os::raw::c_void,
            devices: *mut *mut capture_device_t,
            count: *mut ::std::os::raw::c_int,
        ) -> ::std::os::raw::c_int,
    >,
    pub free_devices: ::std::option::Option<
        unsafe extern "C" fn(
            backend: *mut ::std::os::raw::c_void,
            devices: *mut capture_device_t,
            count: ::std::os::raw::c_int,
        ),
    >,
    pub get_name: ::std::option::Option<
        unsafe extern "C" fn(backend: *mut ::std::os::raw::c_void) -> *const ::std::os::raw::c_char,
    >,
    pub get_version: ::std::option::Option<
        unsafe extern "C" fn(backend: *mut ::std::os::raw::c_void) -> *const ::std::os::raw::c_char,
    >,
    pub get_description: ::std::option::Option<
        unsafe extern "C" fn(backend: *mut ::std::os::raw::c_void) -> *const ::std::os::raw::c_char,
    >,
    pub is_feature_supported: ::std::option::Option<
        unsafe extern "C" fn(
            backend: *mut ::std::os::raw::c_void,
            feature: *const ::std::os::raw::c_char,
        ) -> bool,
    >,
    pub set_option: ::std::option::Option<
        unsafe extern "C" fn(
            backend: *mut ::std::os::raw::c_void,
            option: *const ::std::os::raw::c_char,
            value: *const ::std::os::raw::c_void,
        ) -> ::std::os::raw::c_int,
    >,
    pub get_option: ::std::option::Option<
        unsafe extern "C" fn(
            backend: *mut ::std::os::raw::c_void,
            option: *const ::std::os::raw::c_char,
            value: *mut ::std::os::raw::c_void,
        ) -> ::std::os::raw::c_int,
    >,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of capture_backend_ops_t"][::std::mem::size_of::<capture_backend_ops_t>() - 144usize];
    ["Alignment of capture_backend_ops_t"]
        [::std::mem::align_of::<capture_backend_ops_t>() - 8usize];
    ["Offset of field: capture_backend_ops_t::init"]
        [::std::mem::offset_of!(capture_backend_ops_t, init) - 0usize];
    ["Offset of field: capture_backend_ops_t::cleanup"]
        [::std::mem::offset_of!(capture_backend_ops_t, cleanup) - 8usize];
    ["Offset of field: capture_backend_ops_t::open"]
        [::std::mem::offset_of!(capture_backend_ops_t, open) - 16usize];
    ["Offset of field: capture_backend_ops_t::close"]
        [::std::mem::offset_of!(capture_backend_ops_t, close) - 24usize];
    ["Offset of field: capture_backend_ops_t::start"]
        [::std::mem::offset_of!(capture_backend_ops_t, start) - 32usize];
    ["Offset of field: capture_backend_ops_t::stop"]
        [::std::mem::offset_of!(capture_backend_ops_t, stop) - 40usize];
    ["Offset of field: capture_backend_ops_t::pause"]
        [::std::mem::offset_of!(capture_backend_ops_t, pause) - 48usize];
    ["Offset of field: capture_backend_ops_t::resume"]
        [::std::mem::offset_of!(capture_backend_ops_t, resume) - 56usize];
    ["Offset of field: capture_backend_ops_t::set_filter"]
        [::std::mem::offset_of!(capture_backend_ops_t, set_filter) - 64usize];
    ["Offset of field: capture_backend_ops_t::get_stats"]
        [::std::mem::offset_of!(capture_backend_ops_t, get_stats) - 72usize];
    ["Offset of field: capture_backend_ops_t::get_devices"]
        [::std::mem::offset_of!(capture_backend_ops_t, get_devices) - 80usize];
    ["Offset of field: capture_backend_ops_t::free_devices"]
        [::std::mem::offset_of!(capture_backend_ops_t, free_devices) - 88usize];
    ["Offset of field: capture_backend_ops_t::get_name"]
        [::std::mem::offset_of!(capture_backend_ops_t, get_name) - 96usize];
    ["Offset of field: capture_backend_ops_t::get_version"]
        [::std::mem::offset_of!(capture_backend_ops_t, get_version) - 104usize];
    ["Offset of field: capture_backend_ops_t::get_description"]
        [::std::mem::offset_of!(capture_backend_ops_t, get_description) - 112usize];
    ["Offset of field: capture_backend_ops_t::is_feature_supported"]
        [::std::mem::offset_of!(capture_backend_ops_t, is_feature_supported) - 120usize];
    ["Offset of field: capture_backend_ops_t::set_option"]
        [::std::mem::offset_of!(capture_backend_ops_t, set_option) - 128usize];
    ["Offset of field: capture_backend_ops_t::get_option"]
        [::std::mem::offset_of!(capture_backend_ops_t, get_option) - 136usize];
};
#[doc = " 后端结构"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct capture_backend_t {
    pub private_data: *mut ::std::os::raw::c_void,
    pub ops: *mut capture_backend_ops_t,
    pub type_: capture_backend_type_t,
    pub error_cb: error_callback_t,
    pub error_user_data: *mut ::std::os::raw::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of capture_backend_t"][::std::mem::size_of::<capture_backend_t>() - 40usize];
    ["Alignment of capture_backend_t"][::std::mem::align_of::<capture_backend_t>() - 8usize];
    ["Offset of field: capture_backend_t::private_data"]
        [::std::mem::offset_of!(capture_backend_t, private_data) - 0usize];
    ["Offset of field: capture_backend_t::ops"]
        [::std::mem::offset_of!(capture_backend_t, ops) - 8usize];
    ["Offset of field: capture_backend_t::type_"]
        [::std::mem::offset_of!(capture_backend_t, type_) - 16usize];
    ["Offset of field: capture_backend_t::error_cb"]
        [::std::mem::offset_of!(capture_backend_t, error_cb) - 24usize];
    ["Offset of field: capture_backend_t::error_user_data"]
        [::std::mem::offset_of!(capture_backend_t, error_user_data) - 32usize];
};
unsafe extern "C" {
    #[doc = " 注册后端\n @param backend 后端结构\n @return 成功返回 0，失败返回错误码"]
    pub fn capture_backend_register(backend: *mut capture_backend_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " 注销后端\n @param type 后端类型\n @return 成功返回 0，失败返回错误码"]
    pub fn capture_backend_unregister(type_: capture_backend_type_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " 获取后端\n @param type 后端类型\n @return 成功返回后端结构，失败返回 NULL"]
    pub fn capture_backend_get(type_: capture_backend_type_t) -> *mut capture_backend_t;
}
unsafe extern "C" {
    #[doc = " 获取所有已注册的后端\n @param backends 后端列表\n @param count 后端数量\n @return 成功返回 0，失败返回错误码"]
    pub fn capture_backend_get_all(
        backends: *mut *mut capture_backend_t,
        count: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " 释放后端列表\n @param backends 后端列表\n @param count 后端数量"]
    pub fn capture_backend_free_all(backends: *mut capture_backend_t, count: ::std::os::raw::c_int);
}
